<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- App name label -->
    <string name="app_name">Music Player</string>

    <!-- Activity name labels -->
    <string name="ninetiesCountry">90\'s Country</string>
    <string name="classicCountry">Classic Country</string>
    <string name="classicRock">Classic Rock</string>
    <string name="newerMusic">Newer Music</string>
    <string name="nowPlaying">Now Playing</string>

    <!-- Now Playing -->
    <string name="titleNowPlaying">Title</string>
    <string name="artistNowPlaying">Artist</string>
    <string name="songPosition">0:00</string>
    <string name="songDuration">0:00</string>

    <!-- Image content descriptions -->
    <string name="descriptionCoverArt">album cover art image</string>
    <string name="descriptionSkipPrevious">skip previous button</string>
    <string name="descriptionStop">stop button</string>
    <string name="descriptionPlay">play button</string>
    <string name="descriptionSkipNext">skip next button</string>

    <!-- Number of songs in playlist. It will be shown in the format of "10 songs" where 10 is the number of songs. -->
    <string name="numberOfSongs"><xliff:g example="10" id="numberOfSongs">%s</xliff:g> songs</string>

    <!-- 90's Country ArrayList -->
    <string name="ninetiesTitleOne">Don\'t Rock the Jukebox</string>
    <string name="ninetiesTitleTwo">Chattahoochee</string>
    <string name="ninetiesTitleThree">Brand New Man</string>
    <string name="ninetiesTitleFour">Boot Scootin\' Boogie</string>
    <string name="ninetiesTitleFive">Two Of A Kind, Workin\' On A Full House</string>
    <string name="ninetiesTitleSix">The River</string>
    <string name="ninetiesTitleSeven">Easy Come, Easy Go</string>
    <string name="ninetiesTitleEight">Should\'ve Been A Cowboy</string>
    <string name="ninetiesTitleNine">How Do You Like Me Now?!</string>
    <string name="ninetiesArtistOne">Alan Jackson</string>
    <string name="ninetiesArtistTwo"><![CDATA[Brooks & Dunn]]></string>
    <string name="ninetiesArtistThree">Garth Brooks</string>
    <string name="ninetiesArtistFour">George Strait</string>
    <string name="ninetiesArtistFive">Toby Keith</string>
    <string name="ninetiesLengthOne">2:51</string>
    <string name="ninetiesLengthTwo">2:28</string>
    <string name="ninetiesLengthThree">2:58</string>
    <string name="ninetiesLengthFour">3:17</string>
    <string name="ninetiesLengthFive">2:33</string>
    <string name="ninetiesLengthSix">4:29</string>
    <string name="ninetiesLengthSeven">3:04</string>
    <string name="ninetiesLengthEight">3:31</string>
    <string name="ninetiesLengthNine">3:29</string>

    <!-- Classic Country ArrayList -->
    <string name="classicCountryTitleOne">Kawliga</string>
    <string name="classicCountryTitleTwo">I\'m So Lonesome I Could Cry</string>
    <string name="classicCountryTitleThree">I Walk The Line</string>
    <string name="classicCountryTitleFour">Folsom Prison Blues</string>
    <string name="classicCountryTitleFive">El Paso</string>
    <string name="classicCountryTitleSix">Coca Cola Cowboy</string>
    <string name="classicCountryTitleSeven">Sing Me Back Home</string>
    <string name="classicCountryTitleEight">Mama Tried</string>
    <string name="classicCountryTitleNine">Good Hearted Woman</string>
    <string name="classicCountryTitleTen">Luckenbach, Texas</string>
    <string name="classicCountryTitleEleven">Amanda</string>
    <string name="classicCountryArtistOne">Hank Williams</string>
    <string name="classicCountryArtistTwo">Johnny Cash</string>
    <string name="classicCountryArtistThree">Marty Robbins</string>
    <string name="classicCountryArtistFour">Mel Tillis</string>
    <string name="classicCountryArtistFive">Merle Haggard</string>
    <string name="classicCountryArtistSix">Waylon Jennings</string>
    <string name="classicCountryLengthOne">2:35</string>
    <string name="classicCountryLengthTwo">2:48</string>
    <string name="classicCountryLengthThree">2:47</string>
    <string name="classicCountryLengthFour">2:53</string>
    <string name="classicCountryLengthFive">4:38</string>
    <string name="classicCountryLengthSix">3:25</string>
    <string name="classicCountryLengthSeven">2:51</string>
    <string name="classicCountryLengthEight">2:12</string>
    <string name="classicCountryLengthNine">3:01</string>
    <string name="classicCountryLengthTen">3:22</string>
    <string name="classicCountryLengthEleven">2:57</string>

    <!-- Classic Rock ArrayList -->
    <string name="classicRockTitleOne">Dirty Deeds Done Dirt Cheap</string>
    <string name="classicRockTitleTwo">T.N.T</string>
    <string name="classicRockTitleThree">Here Comes The Sun</string>
    <string name="classicRockTitleFour">Eleanor Rigby</string>
    <string name="classicRockTitleFive">Don\'t Fear The Reaper</string>
    <string name="classicRockTitleSix">I Want You To Want Me</string>
    <string name="classicRockTitleSeven">I Fought The Law</string>
    <string name="classicRockTitleEight">Rebel Rebel</string>
    <string name="classicRockTitleNine">Space Oddity</string>
    <string name="classicRockTitleTen">Smoke On The Water</string>
    <string name="classicRockTitleEleven">Riders On The Storm</string>
    <string name="classicRockTitleTwelve">Rocket Man</string>
    <string name="classicRockTitleThirteen">Third Time Lucky</string>
    <string name="classicRockTitleFourteen">Immigrant Song</string>
    <string name="classicRockTitleSixteen">Misty Mountain Hop</string>
    <string name="classicRockTitleSeventeen">Fool In The Rain</string>
    <string name="classicRockArtistOne">AC/DC</string>
    <string name="classicRockArtistTwo">The Beatles</string>
    <string name="classicRockArtistThree">Blue Öyster Cult</string>
    <string name="classicRockArtistFour">Cheap Trick</string>
    <string name="classicRockArtistFive">The Clash</string>
    <string name="classicRockArtistSix">David Bowie</string>
    <string name="classicRockArtistSeven">Deep Purple</string>
    <string name="classicRockArtistEight">The Doors</string>
    <string name="classicRockArtistNine">Elton John</string>
    <string name="classicRockArtistTen">Foghat</string>
    <string name="classicRockArtistEleven">Led Zeppelin</string>
    <string name="classicRockLengthOne">3:51</string>
    <string name="classicRockLengthTwo">3:34</string>
    <string name="classicRockLengthThree">3:05</string>
    <string name="classicRockLengthFour">2:06</string>
    <string name="classicRockLengthFive">5:08</string>
    <string name="classicRockLengthSix">3:45</string>
    <string name="classicRockLengthSeven">2:43</string>
    <string name="classicRockLengthEight">4:34</string>
    <string name="classicRockLengthNine">5:16</string>
    <string name="classicRockLengthTen">5:42</string>
    <string name="classicRockLengthEleven">7:14</string>
    <string name="classicRockLengthTwelve">4:41</string>
    <string name="classicRockLengthThirteen">4:12</string>
    <string name="classicRockLengthFourteen">2:26</string>
    <string name="classicRockLengthFifteen">4:38</string>
    <string name="classicRockLengthSixteen">6:12</string>

    <!-- Newer Music ArrayList -->
    <string name="newerMusicTitleOne">Fluorescent Adolescent</string>
    <string name="newerMusicTitleTwo">Leave Before The Lights Come On</string>
    <string name="newerMusicTitleThree">Weapon Of Choice</string>
    <string name="newerMusicTitleFour">Beat the Devil\'s Tattoo</string>
    <string name="newerMusicTitleFive">Photograph</string>
    <string name="newerMusicTitleSix">Castle on the Hill</string>
    <string name="newerMusicTitleSeven">Shape of You</string>
    <string name="newerMusicTitleEight">HandClap</string>
    <string name="newerMusicTitleNine">Decent Days And Nights</string>
    <string name="newerMusicTitleTen">Downtown</string>
    <string name="newerMusicTitleEleven">Can\'t Hold Us</string>
    <string name="newerMusicTitleTwelve">Girls Who Play Guitar</string>
    <string name="newerMusicTitleThirteen">Our Velocity</string>
    <string name="newerMusicTitleFourteen">Time to Pretend</string>
    <string name="newerMusicTitleFifteen">Say Hey (I Love You)</string>
    <string name="newerMusicTitleSixteen">Little Lion Man</string>
    <string name="newerMusicTitleSeventeen">Resistance</string>
    <string name="newerMusicArtistOne">Arctic Monkeys</string>
    <string name="newerMusicArtistTwo">Black Rebel Motorcycle Club</string>
    <string name="newerMusicArtistThree">Ed Sheeran</string>
    <string name="newerMusicArtistFour">Fitz and The Tantrums</string>
    <string name="newrMusicArtistFive">The Futureheads</string>
    <string name="newerMusicArtistSix"><![CDATA[Macklemore & Ryan Lewis]]></string>
    <string name="newerMusicArtistSeven">Maximo Park</string>
    <string name="newerMusicArtistEight">MGMT</string>
    <string name="newerMusicArtistNine"><![CDATA[Michael Franti & Spearhead]]></string>
    <string name="newerMusicArtistTen"><![CDATA[Mumford & Sons]]></string>
    <string name="newerMusicArtistEleven">Muse</string>
    <string name="newerMusicLengthOne">2:53</string>
    <string name="newerMusicLengthTwo">3:53</string>
    <string name="newerMusicLengthThree">2:49</string>
    <string name="newerMusicLengthFour">3:45</string>
    <string name="newerMusicLengthFive">4:19</string>
    <string name="newerMusicLengthSix">4:21</string>
    <string name="newerMusicLengthSeven">4:53</string>
    <string name="newrMusicLengthEight">3:13</string>
    <string name="newerMusicLengthNine">2:32</string>
    <string name="newerMusicLengthTen">4:52</string>
    <string name="newerMusicLengthEleven">4:18</string>
    <string name="newerMusicLengthTwelve">3:12</string>
    <string name="newerMusicLengthThirteen">3:20</string>
    <string name="newerMusicLengthFourteen">4:21</string>
    <string name="newerMusicLengthFifteen">3:55</string>
    <string name="newerMusicLengthSixteen">4:07</string>
    <string name="newerMusicLengthSeventeen">5:46</string>
</resources>
