<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".NowPlayingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/allLayoutPadding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/descriptionCoverArt"
                android:src="@drawable/jewel_case" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/allLayoutPadding"
                card_view:cardCornerRadius="@dimen/allCardCornerRadius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/allLayoutPadding">

                    <TextView
                        style="@style/NowPlayingSong"
                        android:text="@string/titleNowPlaying"
                        android:textColor="@color/songTitleColor" />

                    <TextView
                        style="@style/NowPlayingSong"
                        android:text="@string/artistNowPlaying"
                        android:textColor="@color/songArtistColor" />

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/nowPlayingSeekBarPadding" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/allLayoutPadding"
                        android:paddingLeft="@dimen/allLayoutPadding"
                        android:paddingRight="@dimen/allLayoutPadding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/songPosition"
                            android:textColor="@color/songArtistColor" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/songDuration"
                            android:textColor="@color/songArtistColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom">


                        <ImageView
                            style="@style/PlayerControl"
                            android:contentDescription="@string/descriptionSkipPrevious"
                            android:src="@drawable/ic_previous" />

                        <ImageView
                            style="@style/PlayerControl"
                            android:contentDescription="@string/descriptionStop"
                            android:src="@drawable/ic_stop" />

                        <ImageView
                            style="@style/PlayerControl"
                            android:contentDescription="@string/descriptionPlay"
                            android:src="@drawable/ic_play" />

                        <ImageView
                            style="@style/PlayerControl"
                            android:contentDescription="@string/descriptionSkipNext"
                            android:src="@drawable/ic_next" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>