<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fillViewport="true"
    android:padding="@dimen/layoutPadding"
    tools:context=".PlaylistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Image "music"
             Source: https://pixabay.com/en/music-notes-melody-sound-2028528/
             Date: 5/16/18 -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/music" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/cardPadding"
            card_view:cardCornerRadius="@dimen/cardCornerRadius"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/ninetiesCountry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/ninetiesCountry"
                android:textColor="@color/ninetiesHomeScreen"
                android:textSize="@dimen/playlistSelectionSize" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/cardPadding"
            card_view:cardCornerRadius="@dimen/cardCornerRadius"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/classicCountry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/layoutPadding"
                android:text="@string/classicCountry"
                android:textColor="@color/classCountryHomeScreen"
                android:textSize="@dimen/playlistSelectionSize" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/cardPadding"
            card_view:cardCornerRadius="@dimen/cardCornerRadius"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/classicRock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/layoutPadding"
                android:text="@string/classicRock"
                android:textColor="@color/classRockHomeScreen"
                android:textSize="@dimen/playlistSelectionSize" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/cardPadding"
            card_view:cardCornerRadius="@dimen/cardCornerRadius"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/newerMusic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/layoutPadding"
                android:text="@string/newerMusic"
                android:textColor="@color/newerMusicHomeScreen"
                android:textSize="@dimen/playlistSelectionSize" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/cardPadding"
            card_view:cardCornerRadius="@dimen/cardCornerRadius"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/nowPlaying"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/layoutPadding"
                android:text="@string/nowPlaying"
                android:textColor="@color/nowPlayingHomeScreen"
                android:textSize="@dimen/playlistSelectionSize" />

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>